[workspace]

[package]
name = "dcf77-adc"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-dma = "0.2.0"
embedded-hal = "1.0.0"
#embedded-hal-nb = "1.0.0"
pio = "0.2.1"
pio-proc = "0.2.1"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl", "rom-func-cache", "rom-v2-intrinsics", "rp2040-e5", "rt"] }
#usb-device = "0.3.2"
#usbd-serial = "0.2.2"
